# month-range

./: .gitignore  LICENCE  README.md  pyproject.toml
month_range/: HalfYear.py  Month.py  MonthRange.py  QuarterYear.py  Year.py  YearAlignedMonthRange.py  __init__.py  month_number.py  month_range.py  parse_util.py  util.py  year_aligned_month_range.py
month_range/year_aligned/: HalfYear.py  Month.py  QuarterYear.py  Year.py  __init__.py  half_year.py  month.py  parse_util.py  quadrimester.py  quarter_year.py  year.py
tests/: test_month.py  test_month_range.py
