[project]
name = "month-range"
version = "0.1.0"
description = "Handling of month based time ranges."
requires-python = ">=3.13"
readme = "README.md"
authors = [{name = "Felix Hofmann", email = "felix@hofmann.rocks"}]


[dependency-groups]
dev = [
    "ruff>=0.11.2",
    "pytest>=7.0",
]

[tool.ruff]
indent-width = 4
line-length = 120

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # ignore unused imports in __init__.py files

[tool.ruff.lint.pylint]
max-args = 3
